compiler/tests/success/pointers/x86-64/zerofill.jazz
fn zerofill(reg mut ptr u64[1] x) -> reg ptr u64[1] {
  x[0] = 0;
  return x;
}

export
fn main() -> reg u64 {
  stack u64[1] s;
  s = zerofill(s);
  reg u64 r;
  r = s[0];
  return r;
}
