compiler/tests/fail/array_expansion/x86-64/whole_array.jazz
fn f (reg ptr u64[4] s) -> reg u64 {
  reg u64 res;
  res = s[0];
  return res;
}

export fn main () -> reg u64 {
  reg u64[4] r;
  reg u64 res;

  // makeReferenceArguments introduces an equality
  // regptr = r;
  // which is rejected
  res = f(r);

  return res;
}
